--- a/Views/Home/Details.cshtml
+++ b/Views/Home/Details.cshtml
@@ -22,7 +22,7 @@
     </div>    
     
     <div class="col-md-6 details">
-        <h3>Tên sách: @Model.name</h3>
+        <h3>Tên sách: @Model.name_product</h3>
         <p style="text-align: center">
             <span style="font-weight: bold">Mô tả:</span> @Model.descibe
         </p>
