--- a/Views/privacy/dieu_khoan_view.cshtml
+++ b/Views/privacy/dieu_khoan_view.cshtml
@@ -6,7 +6,7 @@
 
 
 <nav class="dieu-khoan-tag">
-    <a href="@Url.Action("dieu_khoan_view","Home", new {@class="dieu-khoan"})">Điều Khoản</a>
+    <a href="@Url.Action("dieu_khoan_view","privacy", new {@class="dieu-khoan"})">Điều Khoản</a>
 </nav>
 <nav class="title-dieu-khoan">
     <div class="main-dieu-khoan">
