--- a/Areas/admin/Views/customer_order/Details.cshtml
+++ b/Areas/admin/Views/customer_order/Details.cshtml
@@ -12,27 +12,43 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.id_cart)
+            @Html.DisplayNameFor(model => model.date_buy)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.id_cart)
+            @Html.DisplayFor(model => model.date_buy)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.quantity_order)
+            @Html.DisplayNameFor(model => model.price)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.quantity_order)
+            @Html.DisplayFor(model => model.price)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.total)
+            @Html.DisplayNameFor(model => model.deli_date)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.total)
+            @Html.DisplayFor(model => model.deli_date)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.address_customer)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.address_customer)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.phone_customer)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.phone_customer)
         </dd>
 
         <dt>
@@ -41,14 +57,6 @@
 
         <dd>
             @Html.DisplayFor(model => model.customer.name_customer)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.product.name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.product.name)
         </dd>
 
     </dl>
