--- a/Areas/admin/Views/products/Index.cshtml
+++ b/Areas/admin/Views/products/Index.cshtml
@@ -5,78 +5,85 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.price)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.discount)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.descibe)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.images)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.images_size)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.brand.name_brand)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.category.name_category)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.warehouse.name_warehouse)
-        </th>
-        <th></th>
-    </tr>
+<section class="vh-100 bg-image"
+         style="background-image: url('https://previews.123rf.com/images/skunkeye/skunkeye1512/skunkeye151200169/49352963-ganja-weed-marijuana-seamless-vector-pattern-background.jpg');">
+    <div class="mask d-flex align-items-center h-100 gradient-custom-3">
+        <div class="container h-100">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+                    <div class="card" style="border-radius: 15px;">
+                        <div class="card-body p-5">
+                            <h2>Index</h2>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.price)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.discount)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.descibe)
-        </td>
-        <td>
-            <img src="~/Content/Images/@item.images"height="150" width="150" />
-        </td>
-        <td>
-            <img src="~/Content/Images/@item.images_size" height="150" width="150" />
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.brand.name_brand)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.category.name_category)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.warehouse.name_warehouse)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.id_products }) |
-            @Html.ActionLink("Details", "Details", new { id=item.id_products }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.id_products })
-        </td>
-    </tr>
-}
+                            <p>
+                                @Html.ActionLink("Create New", "Create", null, new { @class = "btn btn-primary" })
+                            </p>
+                            <table class="table">
+                                <tr>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.name_product)
+                                    </th>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.price)
+                                    </th>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.descibe)
+                                    </th>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.images)
+                                    </th>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.images_size)
+                                    </th>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.brand.name_brand)
+                                    </th>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.category.name_category)
+                                    </th>
+                                    <th></th>
+                                </tr>
 
-</table>
+                                @foreach (var item in Model)
+                                {
+                                    <tr>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.name_product)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.price)
+                                        </td>
+
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.descibe)
+                                        </td>
+                                        <td>
+                                            <img src="~/Content/Images/@item.images" height="150" width="150" />
+                                        </td>
+                                        <td>
+                                            <img src="~/Content/Images/@item.images_size" height="150" width="150" />
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.brand.name_brand)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.category.name_category)
+                                        </td>
+
+                                        <td>
+                                            @Html.ActionLink("Edit", "Edit", new { id = item.id_products }) |
+                                            @Html.ActionLink("Details", "Details", new { id = item.id_products }) |
+                                            @Html.ActionLink("Delete", "Delete", new { id = item.id_products })
+                                        </td>
+                                    </tr>
+                                }
+
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
