--- a/Views/Users/DangNhap.cshtml
+++ b/Views/Users/DangNhap.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@using do_an_web.Models
+@model customer
 @{
     ViewBag.Title = "DangNhap";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -14,7 +15,7 @@
             @Html.ValidationSummary(true)
             <div class="form-group">
                 <label for="dangnhap">Tên đăng nhập:</label>
-                @Html.TextBox("TenDN", null, new
+                @Html.TextBox("name_customer", null, new
                 {
                     @class = "form-control",
                     @id = "dangnhap",
@@ -22,11 +23,11 @@
                 })
             </div>
             <div class="form-group">
-                <label for="matkhau">Mật khẩu:</label>
-                @Html.Password("Matkhau", null, new
+                <label for="password">Mật khẩu:</label>
+                @Html.Password("password_customer", null, new
                 {
                     @class = "form-control",
-                    @id = "matkhau",
+                    @id = "password",
                     required = "required"
                 })
             </div>
